# gnag

./: .gitignore  .prettierignore  Cargo.toml  README.md  grammar-next.gng  grammar.gng  justfile  run.py  test.gng
addons/vscode/: .gitignore  .vscodeignore  LICENSE.md  README.md  gnag.tmLanguage.json  language-configuration.json  package-lock.json  package.json  typst.tmLanguage.json
addons/vscode/src/: extension.ts
crates/code-render/: Cargo.toml
crates/code-render-macro/: Cargo.toml
crates/code-render-macro/src/: lib.rs
crates/code-render/src/: fragment.rs  interner.rs  (+2 more)
crates/dump/: Cargo.toml
crates/gnag/: Cargo.toml
crates/gnag-backend/: Cargo.toml
crates/gnag-backend/src/: ast.rs  build_ast.rs  database.rs  error.rs  handle.rs  lib.rs  literal.rs  span.rs
crates/gnag-backend/src/ast/: build.rs  display.rs  literal.rs  mod.rs  pattern.rs
crates/gnag-backend/src/backend/: builtin.rs  check.rs  grammar.rs  lexer.rs  lower.rs  mod.rs  pratt.rs  resolve.rs
crates/gnag-backend/src/codegen/: mod.rs  render.rs  structure.rs
crates/gnag-cli/: Cargo.toml
crates/gnag-gen/: Cargo.toml
crates/gnag-lsp/: Cargo.toml
crates/gnag-lsp/src/: ctx.rs  executor.rs  ext.rs  handlers.rs  linemap.rs  lsp_ext.rs  main.rs  tokens.rs
crates/gnag-parser/: Cargo.toml
crates/gnag-runtime/: Cargo.toml
crates/gnag/src/: ast.rs  convert.rs  ctx.rs  file.rs  handle.rs  lib.rs
crates/linemap/: Cargo.toml
crates/lsp/: Cargo.toml
docs/: expression.ast  expression.code.rs  expression.cst  expression.gng
src/: ast.rs  bump.rs  grammar.rs  handle.rs  main.rs
(+24 files in other folders)
