[package]
name = "gnag-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-types = "0.94.0"
lsp = { path = "../lsp" }
serde_json = "1.0.104"
serde = "1.0.182"
log = "0.4.19"
simplelog = "0.12.1"
anyhow = "1.0.72"

gnag = { path = "../gnag" }

[dev-dependencies]
oorandom = "11.1.3"
