[package]
name = "gnag"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "print"
path = "bin/print.rs"

[dependencies]
# tracy-client = "0.15.2"

# [dependencies.profiling]
# version = "1.0.8"
# features = ["profile-with-tracy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
